# django-drf-example

./: .gitignore  README.rst  pyproject.toml
farm_registration/: manage.py
farm_registration/farm_registration/: admin.py  asgi.py  settings.py  urls.py  wsgi.py
farm_registration/myapp/: admin.py  apps.py  models.py  views.py
farm_registration/myapp/migrations/: 0001_initial.py  0002_farmer_gender.py  0003_farm.py  0004_farm_area.py  0005_alter_farm_area.py  0006_auto_20210818_1147.py
